2008-09-22  Dirk Schulze  <vbs85@gmx.de>

Reviewed by Eric Seidel.

        Added SVG pattern support to Qt.

        [Qt] SVG patterns are missing
        https://bugs.webkit.org/show_bug.cgi?id=20973

        * svg/graphics/qt/SVGPaintServerPatternQt.cpp:
        (WebCore::SVGPaintServerPattern::setup):


Canonical link: https://commits.webkit.org/29274@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@37006 268f45cc-cd09-0410-ab3c-d52691b4dbfc