WebCore/svg/graphics/qt/SVGPaintServerPatternQt.cpp
@@ -1,7 +1,6 @@
 /*
     Copyright (C) 2006 Nikolas Zimmermann <wildfox@kde.org>
-
-    This file is part of the KDE project
+    Copyright (C) 2008 Dirk Schulze <vbs85@gmx.de>
 
     This library is free software; you can redistribute it and/or
     modify it under the terms of the GNU Library General Public
@@ -24,50 +23,56 @@
 #if ENABLE(SVG)
 #include "SVGPaintServerPattern.h"
 
+#include "AffineTransform.h"
+#include "GraphicsContext.h"
+#include "ImageBuffer.h"
+#include "Pattern.h"
+#include "RenderObject.h"
+#include "SVGPatternElement.h"
+
+#include <QPainter>
+#include <QPainterPath>
+
 namespace WebCore {
 
 bool SVGPaintServerPattern::setup(GraphicsContext*& context, const RenderObject* object, SVGPaintTargetType type, bool isPaintingText) const
 {
-    // FIXME: Reactivate old pattern code
-
-/*
     QPainter* painter(context ? context->platformContext() : 0);
     Q_ASSERT(painter);
 
-    QPainterPath* _path = static_cast<QPainterPath*>(qtContext->path());
-    Q_ASSERT(_path != 0);
+    QPainterPath* path(context ? context->currentPath() : 0);
+    Q_ASSERT(path);
 
-    RenderStyle* renderStyle = object->style();
+    RenderStyle* style = object ? object->style() : 0;
+    const SVGRenderStyle* svgStyle = object ? object->style()->svgStyle() : 0;
+
+    FloatRect targetRect = object->relativeBBox(false);
+    m_ownerElement->buildPattern(targetRect);
+
+    if (!tile())
+        return false;
+
+    RefPtr<Pattern> pattern = Pattern::create(tile()->image(), true, true);
 
     painter->setPen(Qt::NoPen);
     painter->setBrush(Qt::NoBrush);
-    QImage* patternimage = new QImage(tile()->bits(), tile()->width(), tile()->height(), QImage::Format_ARGB32_Premultiplied);
-    patternimage->setAlphaBuffer(true);
-    if (type & APPLY_TO_FILL) {
-        //QColor c = color();
-        //c.setAlphaF(style->fillPainter()->opacity() * style->opacity() * opacity());
-        KRenderingFillPainter fillPainter = KSVGPainterFactory::fillPainter(renderStyle, object);
-        QBrush brush(QPixmap::fromImage(*patternimage));
-        _path->setFillRule(fillPainter.fillRule() == RULE_EVENODD ? Qt::OddEvenFill : Qt::WindingFill);
+
+    AffineTransform affine;
+    affine.translate(patternBoundaries().x(), patternBoundaries().y());
+    affine.multiply(patternTransform());
+
+    QBrush brush(pattern->createPlatformPattern(affine));
+    if ((type & ApplyToFillTargetType) && svgStyle->hasFill()) {
         painter->setBrush(brush);
+        context->setFillRule(svgStyle->fillRule());
     }
-    if (type & APPLY_TO_STROKE) {
-        //QColor c = color();
-        //c.setAlphaF(style->strokePainter()->opacity() * style->opacity() * opacity());
-        KRenderingStrokePainter strokePainter = KSVGPainterFactory::strokePainter(renderStyle, object);
 
+    if ((type & ApplyToStrokeTargetType) && svgStyle->hasStroke()) {
         QPen pen;
-        QBrush brush(QPixmap::fromImage(*patternimage));
-
-        setPenProperties(strokePainter, pen);
         pen.setBrush(brush);
         painter->setPen(pen);
+        applyStrokeStyleToContext(context, style, object);
     }
-
-    painter->drawPath(*_path);
-
-    delete patternimage;
-*/
 
     return true;
 }
